--- a/Project.toml
+++ b/Project.toml
@@ -2,3 +2,21 @@ name = "StochasticPowerModelsACDC"
 uuid = "3f1d3684-8558-4d00-8a65-0c8e8d1c8295"
 authors = ["kaanyurtseven <eng.kaanyurtseven@gmail.com>"]
 version = "0.1.0"
+
+[deps]
+InfrastructureModels = "2030c09a-7f63-5d83-885d-db604e0e9cc0"
+Ipopt = "b6b21f68-93f8-5de0-b562-5493be1d77c9"
+JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
+KernelDensity = "5ab0869b-81aa-558d-bb23-cbf5423bbe9b"
+Memento = "f28f55f0-a522-5efc-85c2-fe41dfb9b2d9"
+PolyChaos = "8d666b04-775d-5f6e-b778-5ac7c70f65a3"
+PowerModels = "c36e90e8-916a-50a6-bd94-075b64ef4655"
+PowerModelsACDC = "ff45984e-d068-5f4c-9e32-c4133509d236"
+
+[compat]
+Ipopt = "1.1.0"
+KernelDensity = "0.6.5"
+Memento = "1.4.0"
+PolyChaos = "0.2.7"
+PowerModels = "0.19.6"
+julia = "1.7"
