--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,8 @@ authors = ["kaanyurtseven <eng.kaanyurtseven@gmail.com>"]
 version = "0.1.0"
 
 [deps]
+BinaryProvider = "b99e7846-7c00-51b0-8f62-c81ae34c0232"
+Cbc = "9961bab8-2fa3-5c5a-9d89-47fab24efd76"
 InfrastructureModels = "2030c09a-7f63-5d83-885d-db604e0e9cc0"
 Ipopt = "b6b21f68-93f8-5de0-b562-5493be1d77c9"
 JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
@@ -12,11 +14,16 @@ Memento = "f28f55f0-a522-5efc-85c2-fe41dfb9b2d9"
 PolyChaos = "8d666b04-775d-5f6e-b778-5ac7c70f65a3"
 PowerModels = "c36e90e8-916a-50a6-bd94-075b64ef4655"
 PowerModelsACDC = "ff45984e-d068-5f4c-9e32-c4133509d236"
+SCS = "c946c3f1-0d1f-5ce8-9dea-7daa1f7e2d13"
 
 [compat]
-Ipopt = "1.1.0"
+Cbc = ">= 0.9"
+InfrastructureModels = "~0.6, ~0.7"
+Ipopt = ">= 0.8"
+JuMP = ">=0.22.0"
 KernelDensity = "0.6.5"
-Memento = "1.4.0"
+Memento = ">=1.1"
 PolyChaos = "0.2.7"
-PowerModels = "0.19.6"
-julia = "1.7"
+PowerModels = "0.19.1"
+SCS = ">= 0.8"
+julia = "^1"
